Hibernate aplicado, annotations a serem feitas

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\dalto\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\ME\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
