--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/PTManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files (x86)\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
