--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PTManagement
+application.vendor=dalto
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,21 +28,21 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/PTManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files (x86)\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-8.0.16.jar=D:\\Setup\\jdbcConector\\mysql-connector-java-8.0.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate4-persistencemodelgen.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-8.0.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
